--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.5.2",
+    "vue-json-excel": "^0.2.98",
     "vue-router": "^3.0.1",
     "vuesax": "^3.11.13",
     "vuetify": "^2.2.12"
